Attempted to fix the following: if there are relative columns the whole viewport is given to the cells but if rows have borders or other elements that take space out of the viewport a horizontal scroll appears. Tried to fix it by having the presenter of the row report its width but it doesn't work because this width may be greater than the viewport width as allowed by the scroller.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/themes/generic.xaml
+++ b/Company.DataGrid/themes/generic.xaml
@@ -191,7 +191,7 @@
 	</Style>
 
 	<Style TargetType="company:Row">
-		<Setter Property="BorderThickness" Value="0,0,0,1" />
+		<Setter Property="BorderThickness" Value="10,0,10,1" />
 		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
 		<Setter Property="Background" Value="{StaticResource windowColor}" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
@@ -208,7 +208,11 @@
 				<ControlTemplate TargetType="company:Row">
 					<Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}">
-						<ItemsPresenter />
+						<ItemsPresenter>
+							<widgets:DataGridFacade.Controllers>
+								<controllers:ViewportWidthController />
+							</widgets:DataGridFacade.Controllers>
+						</ItemsPresenter>
 						<VisualStateManager.CustomVisualStateManager>
 							<company:CustomVSM />
 						</VisualStateManager.CustomVisualStateManager>
